--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-scripts": "1.0.17"
   },
   "scripts": {
-    "build": "webpack",
+    "buildDev": "webpack",
+    "build": "webpack --config ./webpack.config.product.js",
     "start": "webpack-dev-server  --color --progress --open "
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "postcss-loader": "^2.0.9",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.1.5",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
